cleaning plot_sum

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,18 +90,16 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m movie_metadata_clean\u001b[39m.\u001b[39mhead()\n",
+      "Cell \u001b[0;32mIn [5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m movie_metadata_clean\u001b[39m.\u001b[39mhead()\n",
       "\u001b[0;31mNameError\u001b[0m: name 'movie_metadata_clean' is not defined"
      ]
     }
    ],
-   "source": [
-    "movie_metadata_clean.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +165,7 @@
        "595909              Seventh-day Adventist Church pastor Michael Ch..."
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +346,7 @@
        "25001260            {\"/m/0hj3mt0\": \"Alien Film\", \"/m/06n90\": \"Scie...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +822,7 @@
        "975900                     /m/01y9xg  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,35 +833,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'wikipedia movie ID'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexes/base.py:3803\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3803\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3804\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'wikipedia movie ID'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [43], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#in movie_metadata only keep movie_metadata['wikipedia movie ID'] that exist in character_metadata['wikipedia movie ID' and plot_summaries['wikipedia movie ID'\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m plot_summaries[\u001b[39m'\u001b[39m\u001b[39mwikipedia movie ID\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39misin(character_metadata[\u001b[39m'\u001b[39;49m\u001b[39mwikipedia movie ID\u001b[39;49m\u001b[39m'\u001b[39;49m])\u001b[39m.\u001b[39mvalue_counts()\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/frame.py:3804\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3802\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3803\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3804\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3805\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3806\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3803\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3804\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3806\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3807\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3810\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'wikipedia movie ID'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wikipedia movie ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23890098</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31186339</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20663735</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2231378</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>595909</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2867597</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34808485</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1096473</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8628195</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6040782</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>37779 rows × 0 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [23890098, 31186339, 20663735, 2231378, 595909, 5272176, 1952976, 24225279, 2462689, 15401493, 18188932, 2940516, 1335380, 1480747, 24448645, 15072401, 4018288, 4596602, 15224586, 15585766, 29326153, 9252321, 8388648, 10644072, 13455076, 33269085, 2254491, 447194, 24165951, 18549958, 12978934, 8471210, 1925869, 10799612, 3150865, 20591333, 28238240, 5414895, 17124781, 5425205, 28207941, 4356664, 19174305, 33417831, 2408359, 1838882, 25755313, 10016997, 8153846, 24486071, 4466226, 27975390, 6167400, 17711304, 18392317, 15161056, 21500407, 3459677, 34420857, 18369853, 529276, 20631892, 24577134, 32556450, 455089, 23266463, 35779717, 226664, 25113407, 27403920, 2524925, 657446, 1591973, 12383757, 4355919, 32163620, 11685571, 17371197, 1282593, 7504323, 7675415, 3109393, 7580720, 457561, 32137084, 4072739, 8034072, 3470969, 4016437, 17060199, 7481126, 9031450, 14582951, 4803289, 1788654, 25388139, 21735071, 15912738, 24589422, 4767342, ...]\n",
+       "\n",
+       "[37779 rows x 0 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#in movie_metadata only keep movie_metadata['wikipedia movie ID'] that exist in character_metadata['wikipedia movie ID' and plot_summaries['wikipedia movie ID'\n",
+    "from collections import Counter\n",
+    "movie_id_plot = plot_summaries.iloc[:, :0]\n",
+    "movie_id_plot\n",
+    "movie_id_character=character_metadata.iloc[:, :0]\n",
     "\n",
-    "plot_summaries['wikipedia movie ID'].isin(character_metadata['wikipedia movie ID']).value_counts()\n"
+    "#x=Counter(movie_id_character) - Counter(movie_id_plot)\n",
+    "#only keep rows of movie_id_plot that are in movie_id_character\n",
+    "movie_id_plot = movie_id_plot[movie_id_plot.index.isin(movie_id_character.index)]\n",
+    "#only keep rows of movie_id_character that are in movie_id_plot\n",
+    "movie_id_character = movie_id_character[movie_id_character.index.isin(movie_id_plot.index)]\n",
+    "\n",
+    "\n"
    ]
   },
   {
